--- a/sprawozdanie/sprawozdanie.tex
+++ b/sprawozdanie/sprawozdanie.tex
@@ -64,7 +64,21 @@ W przypadku zadanej dokładności równej $1-E6$ zauważyć można że, różnic
 \begin{wn}
 	Metody iteracyjne umożliwiają rozwiązanie problemu aczkolwiek, by osiągnąć dokładniejsze wyniki, należy zwiększyć dokładność, a co za tym idzie - liczbę iteracji, co znacząco wydłuża czas działania algorytmu.
 \end{wn}
-
+\section{Analiza wyników i wydajność zaimplementowanych algorytmów}
+\begin{figure}[h]
+	\caption{Wykresy reprezentujące czas wykonania i błędy bezwzględne zaimplementowanych algorytmów \label{rys}}
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=\textwidth]{2.png}
+		\caption{ \label{Rys2a}}
+	\end{subfigure}
+\end{figure}
+\subsection{Analiza wyników}
+Błąd bezwzględny dla poszczególnych metod był wyliczany w sposób następujący:
+\begin{enumerate}
+	\item Wygenerowana została macierz $A$ oraz wektor $B$
+	\item Za pomocą danego
+\end{enumerate}
+\subsubsection{Gauss oraz Gauss z optymalizacją dla macierzy rzadkich}
 \section{Podział pracy}
 \centering
 	\begin{tabular}{| p{4.4cm} | p{4.4cm} | p{4.4cm} |}
